# openmpf-contrib-components

./: .gitignore  README.md
cpp/: CMakeLists.txt  ComponentSetup.cmake
cpp/OcvPersonDetection/: CMakeLists.txt  Dockerfile  LICENSE  PersonDetection.cpp  PersonDetection.h  README.md  sample_ocv_person_detector.cpp
cpp/OcvPersonDetection/plugin-files/config/: Log4cxxConfig.xml  mpfOcvPersonDetection.ini
cpp/OcvPersonDetection/plugin-files/descriptor/: descriptor.json
cpp/OcvPersonDetection/test/: CMakeLists.txt  test_ocv_person_config.ini  test_ocv_person_detection.cpp
cpp/OcvPersonDetection/test/data/test_imgs/: NOTICE  ocv_person_known_detections.txt
cpp/OcvPersonDetection/test/data/test_vids/: NOTICE  ocv_person_known_tracks.txt  ocv_person_video.avi  runners.avi  runners_known_tracks.txt
cpp/OcvPersonDetection/tracking/: appTemplate.cpp  appTemplate.h  dataReader.cpp  dataReader.h  detector.cpp  detector.h  multiTrackAssociation.cpp  multiTrackAssociation.h  parameter.h  tracker.cpp  tracker.h  util.h
cpp/OcvSSDFaceDetection/: .code-workspace  CMakeLists.txt  Dockerfile  OcvDetection.cpp  OcvDetection.h  OcvFaceDetection.cpp  OcvSDDFaceDetection.code-workspace  OcvSSDFaceDetection.cpp  OcvSSDFaceDetection.h  sample_ocv_face_detector.cpp  sample_ocv_ssd_face_detector.cpp
cpp/OcvSSDFaceDetection/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
cpp/OcvSSDFaceDetection/plugin-files/config/: Log4cxxConfig.xml  mpfOcvSSDFaceDetection.ini
cpp/OcvSSDFaceDetection/test/: CMakeLists.txt  test_ocv_face_detection.cpp  test_ocv_ssd_face_detection.cpp
cpp/OcvSsdFaceDetection/: .gitignore  CMakeLists.txt  DetectionLocation.cpp  DetectionLocation.h  JobConfig.cpp  JobConfig.h  OcvDetection.cpp  OcvSsdFaceDetection.code-workspace  OcvSsdFaceDetection.cpp  OcvSsdFaceDetection.h  OcvSsdFaceDetection_JobConfig.h  OcvSsdFaceDetection_streamio.h  OcvSsdFaceDetection_types.h  README.md  build.sh  munkres.cpp  sample_ocv_ssd_face_detector.cpp  types.h
cpp/OcvSsdFaceDetection/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
cpp/OcvSsdFaceDetection/.unotes/: unotes_meta.json
cpp/OcvSsdFaceDetection/plugin-files/config/: Log4cxxConfig.xml  mpfOcvSsdFaceDetection.ini
cpp/OcvSsdFaceDetection/plugin-files/data/: NOTICE
cpp/OcvSsdFaceDetection/plugin-files/descriptor/: descriptor.json
cpp/OcvSsdFaceDetection/test/: CMakeLists.txt  DetectionComparisonA.cpp  DetectionComparisonA.h  catch_exception.h  test_ocv_ssd_face_config.bak  test_ocv_ssd_face_config.ini  test_ocv_ssd_face_detection.cpp
cpp/OcvSsdFaceDetection/test/data/test_vids/: ocv_face_known_tracks.txt  ocv_face_known_tracks_short.txt
cpp/motion/: .dockerignore  CMakeLists.txt  LICENSE  README.md
cpp/motion/MogMotionDetection/: CMakeLists.txt  Dockerfile  MotionDetection_MOG2.cpp  MotionDetection_MOG2.h  sample_mog_motion_detector.cpp
cpp/motion/MogMotionDetection/plugin-files/config/: Log4cxxConfig.xml  mpfMogMotionDetection.ini
cpp/motion/MogMotionDetection/plugin-files/descriptor/: descriptor.json
cpp/motion/MogMotionDetection/test/: CMakeLists.txt  test_mog_motion_config.ini  test_mog_motion_detection.cpp
cpp/motion/MogMotionDetection/test/data/test_vids/: ocv_motion_known_tracks.txt
cpp/motion/STRUCK/: .config.txt.swp  CMakeLists.txt  Features.h  ImageRep.cpp  ImageRep.h  Kernels.h  LaRank.cpp  LaRank.h  RawFeatures.h  Tracker.cpp  Tracker.h  struck.cpp  struck.h  vot.hpp
cpp/motion/STRUCK/GraphUtils/: GraphUtils.cpp  GraphUtils.h
cpp/motion/STRUCK/eigen/: CMakeLists.txt
cpp/motion/SubsenseMotionDetection/: CMakeLists.txt  Dockerfile  MotionDetection_Subsense.cpp  MotionDetection_Subsense.h  StreamingMotionDetection_Subsense.cpp  StreamingMotionDetection_Subsense.h  SubsenseMotionDetectionUtils.cpp  SubsenseMotionDetectionUtils.h  SubsenseUtils.cpp  SubsenseUtils.h  sample_subsense_motion_detector.cpp  sample_subsense_streaming_motion_detector.cpp
cpp/motion/SubsenseMotionDetection/SubSense/: BackgroundSubtractorLBSP.cpp  BackgroundSubtractorLBSP.h  BackgroundSubtractorSuBSENSE.cpp  BackgroundSubtractorSuBSENSE.h  CMakeLists.txt  DistanceUtils.h  LBSP.cpp  LBSP.h  LBSP_16bits_dbcross_1ch.i  LBSP_16bits_dbcross_3ch1t.i  LBSP_16bits_dbcross_3ch3t.i  LBSP_16bits_dbcross_s3ch.i  README.txt  RandUtils.h  bgfg_segm.cpp
cpp/motion/SubsenseMotionDetection/plugin-files/config/: Log4cxxConfig.xml  mpfSubsenseMotionDetection.ini
cpp/motion/SubsenseMotionDetection/plugin-files/descriptor/: descriptor.json
cpp/motion/SubsenseMotionDetection/test/: CMakeLists.txt  test_subsense_motion_config.ini  test_subsense_motion_detection.cpp  test_subsense_streaming_motion_detection.cpp
cpp/motion/SubsenseMotionDetection/test/data/test_vids/: NOTICE  motion_tracking_known_tracks.txt  struck_test_known_tracks.txt
cpp/motion/Utils/: MotionDetectionUtils.cpp  MotionDetectionUtils.h
